finished animation preloader

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <!-- ================ MAIN ==================== -->
     <main class="main">
       <section class="gameSettings">
-        <div class="playerCard">
+	<h1 class="gameSettings__title">TIC TAC TOE</h1>
+	<div class="playerCard">
+	  <h3>PLAYER 1</h3>
 	  <img src="assets/images/person-svgrepo-com.svg" alt="" class="playerCard__img">
-          <input type="text" name="playerNameOne" />
+	  <input type="text" name="playerNameOne" placeholder="Name"/>
         </div>
         <div class="playerCard">
+	  <h3>PLAYER 2</h3>
 	  <img src="assets/images/cpu-svgrepo-com.svg" alt="" class="playerCard__img">
-          <input type="text" name="playerNameTwo" />
+          <input type="text" name="playerNameTwo" placeholder="Name"/>
         </div>
-        <button class="gameStart">Start Game</button>
+        <button class="btn">Start Game</button>
       </section>
       <section class="gameContainer"></section>
     </main>
