TODO validate input name for player

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 	<h1 class="gameSettings__title">TIC TAC TOE</h1>
 	<div class="playerCard">
 	  <h3>PLAYER 1</h3>
-	  <img src="assets/images/person-svgrepo-com.svg" alt="" class="playerCard__img">
-	  <input type="text" name="playerNameOne" placeholder="Name"/>
+	  <img src="assets/images/person.svg" alt="" class="playerCard__img">
+	  <input type="text" name="playerNameOne" placeholder="Insert Name" class="player__name"/>
         </div>
         <div class="playerCard">
 	  <h3>PLAYER 2</h3>
-	  <img src="assets/images/cpu-svgrepo-com.svg" alt="" class="playerCard__img">
-          <input type="text" name="playerNameTwo" placeholder="Name"/>
+	  <img src="assets/images/cpu.svg" alt="" class="playerCard__img">
+          <input type="text" name="playerNameTwo" placeholder="CPU" class="player__name player__name--cpu"/>
         </div>
         <button class="btn">Start Game</button>
       </section>
