TODO validation input

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <div class="playerCard">
 	  <h3>PLAYER 2</h3>
-	  <img src="assets/images/cpu.svg" alt="" class="playerCard__img">
-          <input type="text" name="playerNameTwo" placeholder="CPU" class="player__name player__name--cpu"/>
+	  <img src="assets/images/person.svg" alt="" class="playerCard__img">
+          <input type="text" name="playerNameTwo" placeholder="Insert Name" class="player__name"/>
         </div>
         <button class="btn">Start Game</button>
       </section>
