--- a/index.html
+++ b/index.html
@@ -19,20 +19,58 @@
     <!-- ================ MAIN ==================== -->
     <main class="main">
       <section class="gameSettings">
-	<h1 class="gameSettings__title">TIC TAC TOE</h1>
-	<div class="playerCard">
-	  <h3>PLAYER 1</h3>
-	  <img src="assets/images/person.svg" alt="" class="playerCard__img">
-	  <input type="text" name="playerNameOne" placeholder="Insert Name" class="player__name"/>
+        <h1 class="gameSettings__title">TIC TAC TOE</h1>
+        <div class="playerCard">
+          <h3>PLAYER 1</h3>
+          <img
+            src="assets/images/person.svg"
+            alt=""
+            class="playerCard__img"
+            aria-data="person"
+          />
+          <input
+            type="text"
+            name="playerNameOne"
+            placeholder="Insert Name"
+            class="player__name"
+          />
         </div>
         <div class="playerCard">
-	  <h3>PLAYER 2</h3>
-	  <img src="assets/images/person.svg" alt="" class="playerCard__img">
-          <input type="text" name="playerNameTwo" placeholder="Insert Name" class="player__name"/>
+          <h3>PLAYER 2</h3>
+          <img
+            src="assets/images/person.svg"
+            alt=""
+            class="playerCard__img"
+            aria-data="person"
+          />
+          <input
+            type="text"
+            name="playerNameTwo"
+            placeholder="Insert Name"
+            class="player__name"
+          />
         </div>
         <button class="btn">Start Game</button>
       </section>
-      <section class="gameContainer"></section>
+
+      <section class="gameContainer">
+        <header class="gameContainer__header">
+          <p class="name">PLAYER</p>
+          <p>VS</p>
+          <p class="name">CPU</p>
+        </header>
+        <div class="gameContainer__grid">
+          <div class="grid__box"></div>
+          <div class="grid__box border border-ntb"></div>
+          <div class="grid__box"></div>
+          <div class="grid__box border border-nlr"></div>
+          <div class="grid__box border"></div>
+          <div class="grid__box border border-nlr"></div>
+          <div class="grid__box"></div>
+          <div class="grid__box border border-ntb"></div>
+          <div class="grid__box"></div>
+        </div>
+      </section>
     </main>
     <!-- =============== FOOTER =================== -->
     <footer class="footer"></footer>
